# CNeuralNet

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: layers_example.c  network_example.c  simple_net.c
examples/classification_example/: classification_example.c  readme.md
examples/mnist/: mnist_example.c
include/: image.h  layer.h  math_functions.h  matrix.h  network.h
src/: image.c  layer.c  main.c  math_functions.c  matrix.c  network.c
